# EagleView_API_Testing

./: .gitignore  Dockerfile  GITHUB_REPO_STRUCTURE.md  Makefile  PROJECT_STRUCTURE.md  README.md  additional_property_data_requests_20250920_025328.json  address_property_data_result_67f991bf-0a6a-4be0-ab07-97358d4ca3c2.json  client_credentials_eagleview.py  demo_fetch_reports.py  demo_info.bat  demo_overview.py  demo_programmatic_usage.py  docker-compose.yml  download_all_test_images.py  eagleview_imagery_summary_20250920_022819.json  eagleview_property_data_requests_20250920_022800.json  fetch_and_download_reports.py  fetch_images_client_credentials.py  imagery_data_Custom_Location_1_41.251_-95.992.json  imagery_data_Custom_Location_3_41.254_-95.998.json  imagery_data_Downtown_Omaha_41.248_-95.985.json  imagery_data_Midtown_Omaha_41.252_-95.995.json  imagery_data_North_Omaha_41.243_-95.978.json  property_data_result_01781285-3526-47a3-a6b9-243e571c5ee5.json  property_data_result_6f4fc65e-7caa-49b1-afb9-ff96067b8ce7.json  property_data_result_dce2f233-b84a-4b0d-880b-1bded5ede99a.json  pyproject.toml  requirements-dev.txt  requirements.txt  run_all_demos.py  test_additional_data.py  test_custom_locations.py  test_functionality.py  test_multi_env.py
cli/: eagleview.py
config/: production.yaml
data/imagery/: imagery_data_Custom_Location_2_41.247_-95.988.json
data/requests/: additional_property_data_requests_20250920_023349.json  address_based_property_data_requests_20250920_025729.json  custom_property_data_requests_20250920_025606.json  eagleview_property_data_requests_20250920_025209.json
data/results/: address_property_data_result_f0663526-d75d-499d-af08-1df40b28893f.json  custom_property_data_result_db49fd0b-e350-4bf0-9b0f-07f9891a9f84.json
docs/: CODE_QUALITY_ANALYSIS.md  DEMO_SUMMARY.md  GETTING_STARTED.md  IMAGE_DOWNLOAD_SUMMARY.md  MIGRATION_TO_MULTI_ENV.md  MULTI_ENVIRONMENT_ARCHITECTURE.md  README.md  REPORTS_INFO.md  refactoring.md
docs/api_docs/: Authentication Methods - API Doc.json  Imagery API Documentation.json  Measurement Order API Documentation.json  Property Data V2 API Documentation.json  WMTS API Documentation.json
examples/: production_examples.py  sandbox_examples.py
scripts/: Dockerfile  download_reports.py  fetch_property_results.py  pyproject.toml  setup.bat  setup.ps1  setup.py  setup.sh
src/core/: download_images.py  fetch_reports_client_credentials.py
src/demos/: demo_run.py
src/eagleview/client/: __init__.py  base.py
src/eagleview/config/: __init__.py  base.py  production.py  sandbox.py
src/eagleview/services/: __init__.py
src/eagleview/services/base/: fetch_property_data_service.py  imagery_service.py  (+2 more)
src/eagleview/utils/: cache.py  file_ops.py
src/tests/: test_address_requests.py
src/utils/: download_address_images.py
(+2 files in other folders)
