[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eagleview-api-client"
version = "1.0.0"
description = "A Python client library and example programs for interacting with the EagleView API"
authors = [
    {name = "Satyam Rastogi"}
]
readme = "README.md"
license = {text = "Proprietary"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.25.0",
]
requires-python = ">=3.12"

[project.urls]
Homepage = "https://github.com/satyamrastogi/eagleview-api-client"
Repository = "https://github.com/satyamrastogi/eagleview-api-client"

[project.scripts]
eagleview-demo = "demo_run:main"